--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-![Screenshot A](/assets/screenshot-a.png)
-![Screenshot B](/assets/screenshot-b.png)
+![Screenshot A](./assets/screenshot-a.png)
+![Screenshot B](./assets/screenshot-b.png)
