--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-![Screenshot A](./assets/screenshot-a.jpg)
-![Screenshot B](./assets/screenshot-b.jpg)
+![Screenshot A](/assets/screenshot-a.jpg)
+![Screenshot B](/assets/screenshot-b.jpg)
